# task_manager

./: .gitignore  .mcp.json  CLAUDE.md  README.md  instructions.md  open_console.bat  open_console_tm.bat
backend/: .env.example  nixpacks.toml  pyproject.toml  run.bat
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  router_factory.py  schemas.py  search.py  table_registry.py
backend/app/agent/: __init__.py  api_client.py  config.py  orchestrator.py  system_prompt.py  table_metadata.py  tools_definition.py  tools_executor.py
backend/app/calculated_fields/: __init__.py  cache.py  definitions.py  estado.py  lookup.py  service.py  utils.py
backend/app/charts/: renderer.py
backend/app/routers/: __init__.py  acciones.py  admin.py  agent.py  avance.py  ayuda.py  beneficios.py  charts.py  datos_descriptivos.py  datos_ejecucion.py  datos_relevantes.py  dependencias.py  descripciones.py  documentos.py  documentos_items.py  estado_especial.py  estados.py  etiquetas.py  etiquetas_destacadas.py  facturacion.py  fichas.py  grupos_iniciativas.py  hechos.py  impacto_aatt.py  informacion_economica.py  iniciativas.py  investment_memos.py  justificaciones.py  ltp.py  migracion_metadata.py  notas.py  parametros.py  portfolio.py  responsables.py  sql.py  stats.py  tareas.py  trabajos.py  transacciones.py  transacciones_json.py  (+1 more)
backend/app/services/: excel_mapping.py  excel_pk_resolver.py  excel_writer.py  sql_validator.py  transaction_processor.py
management/: .env.example  debug.txt  manage.py  pyproject.toml  run.bat
management/src/: __init__.py
management/src/calculate/: __init__.py  engine.py  estado_functions.py  helper_functions.py  importe_functions.py  lookup_functions.py
management/src/config/: settings.py
management/src/core/: __init__.py  data_quality.py  logging_config.py
management/src/export/: __init__.py  documentos_items_export.py  excel_export.py
management/src/init/: __init__.py  db_init.py
mcp_server/: .env.example  pyproject.toml
(+494 files in other folders)
