[project]
name = "task-manager-mcp"
version = "0.1.0"
description = "MCP server providing access to Task Manager data via the FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx",
    "python-dotenv",
]

[project.scripts]
mcp-tareas = "mcp_tareas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tareas"]
